--- a/Cloud/Kubernetes/Helm/index.yaml
+++ b/Cloud/Kubernetes/Helm/index.yaml
@@ -1,23 +1,76 @@
 apiVersion: v1
 entries:
-  fabric:
-  - apiVersion: v1
-    created: 2017-06-06T10:33:02.800784489Z
-    description: Microservice Builder Fabric
-    digest: 4d1f14f9f2f893460e614bd4077096ef1783b0d0a2a8d8d0f2e65586fde07190
-    icon: https://public.dhe.ibm.com/ibmdl/export/pub/software/websphere/wasdev/microservicebuilder/icon.png
-    name: fabric
+  dsm:
+  - created: 2017-06-15T22:29:05.996324953-07:00
+    description: IBM Data Server Manager
+    digest: sha256:94f100bc8023c699af63c78cc653c16d8113677d7de19f12b546818e1d55a999
+    engine: gotpl
+    home: https://www.ibm.com/developerworks/cn/downloads/im/dsm/index.html
+    keywords:
+    - DB2
+    - database
+    - DSM
+    maintainers:
+    - email: dsmdev@cn.ibm.com
+      name: dsmdev@cn.ibm.com
+    name: dsm
+    sources:
+    - https://github.com/DSM-dev/ci.docker.dsm-enterprise
     urls:
-    - https://public.dhe.ibm.com/ibmdl/export/pub/software/websphere/wasdev/microservicebuilder/helm/fabric-1.0.0.tgz
-    version: 1.0.0
-  pipeline:
-  - apiVersion: v1
-    created: 2017-06-06T10:33:02.801909861Z
-    description: Microservice Builder Pipeline
-    digest: e3e73c769412db45ec0d33a8ce2b2809f89da08da989a311c95dbd7c68426a5c
-    icon: https://public.dhe.ibm.com/ibmdl/export/pub/software/websphere/wasdev/microservicebuilder/icon.png
-    name: pipeline
+    - http://127.0.0.1:8879/charts/dsm-0.1.0.tgz
+    version: 0.1.0
+  - created: 2017-06-15T22:32:41.326332498-07:00
+    description: IBM Data Server Manager
+    digest: sha256:78d6bdb04f835cc289e27013787778e82513acbabd64148052566a4a5033e033
+    engine: gotpl
+    home: https://www.ibm.com/developerworks/cn/downloads/im/dsm/index.html
+    keywords:
+    - DB2
+    - database
+    - DSM
+    maintainers:
+    - email: dsmdev@cn.ibm.com
+      name: dsmdev@cn.ibm.com
+    name: dsm
+    sources:
+    - https://github.com/DSM-dev/ci.docker.dsm-enterprise
     urls:
-    - https://public.dhe.ibm.com/ibmdl/export/pub/software/websphere/wasdev/microservicebuilder/helm/pipeline-1.0.0.tgz
-    version: 1.0.0
-generated: 2017-06-06T10:33:02.799077378Z
+    - http://127.0.0.1:8879/charts/dsm-0.1.0.tgz
+    version: 0.1.0
+  - created: 2017-06-15T22:34:12.349249127-07:00
+    description: IBM Data Server Manager
+    digest: sha256:60736b3d67e8e69439d04e7e2e863514beb0bddc149785a953f3feaadf563cc3
+    engine: gotpl
+    home: https://www.ibm.com/developerworks/cn/downloads/im/dsm/index.html
+    keywords:
+    - DB2
+    - database
+    - DSM
+    maintainers:
+    - email: dsmdev@cn.ibm.com
+      name: dsmdev@cn.ibm.com
+    name: dsm
+    sources:
+    - https://github.com/DSM-dev/ci.docker.dsm-enterprise
+    urls:
+    - http://127.0.0.1:8879/charts/dsm-0.1.0.tgz
+    version: 0.1.0
+  - created: 2017-06-15T22:38:34.368633149-07:00
+    description: IBM Data Server Manager
+    digest: sha256:b6a810262b447305f600affdd03e21e9ccfb8e846d44305830bbebcb0ab5e37c
+    engine: gotpl
+    home: https://www.ibm.com/developerworks/cn/downloads/im/dsm/index.html
+    keywords:
+    - DB2
+    - database
+    - DSM
+    maintainers:
+    - email: dsmdev@cn.ibm.com
+      name: dsmdev@cn.ibm.com
+    name: dsm
+    sources:
+    - https://github.com/DSM-dev/ci.docker.dsm-enterprise
+    urls:
+    - http://127.0.0.1:8879/charts/dsm-0.1.0.tgz
+    version: 0.1.0
+generated: 2017-06-15T18:55:52.821122743-07:00
